# upgraded_task_manager

./: .env.dev  app.py  main.py  pyproject.toml  requirements.txt  tasks.db
core/: config.py
db/: session.py
models/: task.py
repository/: system_repository.py  task_repository.py
routers/: system.py  tasks.py
schemas/: tasks.py
