[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "fastapi-limiter>=0.2.0",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.13.1",
    "pyrate-limiter>=4.1.0",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "requests>=2.33.1",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.56.0",
    "uvicorn[standard]>=0.44.0",
]
